Added `form` support for fluent adapter.